@@ -48,23 +48,26 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "Seifert"
-            VALUE "FileDescription", "Windows Directory Statistics"
+            VALUE "FileDescription", "WinDirStat Russian Resources"
             VALUE "FileVersion", VN_STRING
-            VALUE "InternalName", "windirstat"
+            VALUE "InternalName", "wdsr0419"
             VALUE "LegalCopyright", "Copyright (c) 2003-2004 Bernhard Seifert"
-            VALUE "OriginalFilename", "windirstat.exe"
+            VALUE "OriginalFilename", "wdsr0419.dll"
             VALUE "ProductName", "WinDirStat"
             VALUE "ProductVersion", VN_STRING
         END
     END
     BLOCK "VarFileInfo"
     BEGIN
-        VALUE "Translation", 0x409, 1252
+        VALUE "Translation", 0x419, 1251
     END
 END
 
 
 // $Log$
+// Revision 1.2  2004/11/27 07:19:37  bseifert
+// Unicode/Ansi/Debug-specification in version.h/Aboutbox. Minor fixes.
+//
 // Revision 1.1  2004/11/15 19:55:00  assarbad
 // - Russian translation (still a few strings missing) - thanks to Sergiy Polyetayev
 //
